[gd_scene load_steps=10 format=3 uid="uid://ylarq2r0auqf"]

[ext_resource type="PackedScene" uid="uid://0j3vg3g6jhuj" path="res://scenes/units/unit.tscn" id="1_us6fi"]
[ext_resource type="Script" uid="uid://cs54g5p0tc17x" path="res://scenes/units/players/player.gd" id="2_yaur4"]
[ext_resource type="Texture2D" uid="uid://cproxhccob85g" path="res://assets/sprites/Players/Player_1.png" id="3_d3mmk"]
[ext_resource type="Resource" uid="uid://bm55c4ebixhnv" path="res://resources/units/players/player_well_rounded.tres" id="3_yaur4"]
[ext_resource type="Script" uid="uid://cr2hmww6q12b5" path="res://scenes/units/players/player_trail.gd" id="4_d3mmk"]
[ext_resource type="Script" uid="uid://bm7wt8tycxsot" path="res://scenes/units/players/weapons_container.gd" id="6_udkk8"]

[sub_resource type="Curve" id="Curve_udkk8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_us6fi"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_d3mmk"]
radius = 33.0

[node name="PlayerWellRounded" instance=ExtResource("1_us6fi")]
collision_mask = 0
script = ExtResource("2_yaur4")
dash_duration = 0.5
dash_speed_multi = 2.5
dash_cooldown = 2.0
stats = ExtResource("3_yaur4")

[node name="Trail" type="Line2D" parent="Visuals" index="0" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
top_level = true
position = Vector2(0, -32)
width = 50.0
width_curve = SubResource("Curve_udkk8")
script = ExtResource("4_d3mmk")
player = NodePath("../..")

[node name="Shadow" parent="Visuals" index="1"]
z_index = 1

[node name="Sprite" parent="Visuals" index="2"]
z_index = 1
texture = ExtResource("3_d3mmk")

[node name="CollisionShape2D" parent="." index="1"]
z_index = 2
position = Vector2(0, -30)
shape = SubResource("CircleShape2D_us6fi")

[node name="Weapons" type="Node2D" parent="." index="3"]
script = ExtResource("6_udkk8")

[node name="One" type="Node2D" parent="Weapons" index="0"]
visible = false

[node name="Marker2D" type="Marker2D" parent="Weapons/One" index="0"]
position = Vector2(0, -15)

[node name="Two" type="Node2D" parent="Weapons" index="1"]
visible = false

[node name="Marker2D" type="Marker2D" parent="Weapons/Two" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="Weapons/Two" index="1"]
position = Vector2(-40, 20)

[node name="Three" type="Node2D" parent="Weapons" index="2"]
visible = false

[node name="Marker2D" type="Marker2D" parent="Weapons/Three" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="Weapons/Three" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="Weapons/Three" index="2"]
position = Vector2(0, -115)

[node name="Four" type="Node2D" parent="Weapons" index="3"]
visible = false

[node name="Marker2D" type="Marker2D" parent="Weapons/Four" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="Weapons/Four" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="Weapons/Four" index="2"]
position = Vector2(40, -115)

[node name="Marker2D4" type="Marker2D" parent="Weapons/Four" index="3"]
position = Vector2(-40, -115)

[node name="Five" type="Node2D" parent="Weapons" index="4"]
visible = false

[node name="Marker2D" type="Marker2D" parent="Weapons/Five" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="Weapons/Five" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="Weapons/Five" index="2"]
position = Vector2(60, -40)

[node name="Marker2D4" type="Marker2D" parent="Weapons/Five" index="3"]
position = Vector2(-60, -40)

[node name="Marker2D5" type="Marker2D" parent="Weapons/Five" index="4"]
position = Vector2(0, -115)

[node name="Six" type="Node2D" parent="Weapons" index="5"]
visible = false

[node name="Marker2D" type="Marker2D" parent="Weapons/Six" index="0"]
position = Vector2(35, 30)

[node name="Marker2D2" type="Marker2D" parent="Weapons/Six" index="1"]
position = Vector2(-35, 30)

[node name="Marker2D3" type="Marker2D" parent="Weapons/Six" index="2"]
position = Vector2(35, -115)

[node name="Marker2D4" type="Marker2D" parent="Weapons/Six" index="3"]
position = Vector2(-35, -115)

[node name="Marker2D5" type="Marker2D" parent="Weapons/Six" index="4"]
position = Vector2(60, -40)

[node name="Marker2D6" type="Marker2D" parent="Weapons/Six" index="5"]
position = Vector2(-60, -40)

[node name="DashTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="TrailTimer" type="Timer" parent="." index="6"]
unique_name_in_owner = true

[node name="HPTimer" type="Timer" parent="." index="7"]
wait_time = 3.0
autostart = true

[node name="HurtboxComponent" parent="." index="8"]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
z_index = 1
position = Vector2(0, -31)
shape = SubResource("CircleShape2D_d3mmk")

[node name="HealthBar" parent="." index="10"]
back_color = Color(0.137255, 0.0196078, 0.027451, 1)
fill_color = Color(1, 0.290196, 0.454902, 1)

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="TrailTimer" to="Visuals/Trail" method="_on_trail_timer_timeout"]
[connection signal="timeout" from="HPTimer" to="." method="_on_hp_timer_timeout"]
